--- a/cars.html
+++ b/cars.html
@@ -13,9 +13,11 @@
 
     <!-- phone styles -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/cars.css">
 
     <!-- tablet styles -->
     <link rel="stylesheet" href="css/main-tablet.css">
+    <link rel="stylesheet" href="css/cars-tablet.css">
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
@@ -55,15 +57,87 @@
             </div>
         </header>
 
-        <main>
-            <div class="main_wrap">
-                <h1 class="company_name">szybka jazda</h1>
-                <img class="img_logo" src="img/logo.png" alt="engine with star - logo">
-                <div class="main_buttons">
-                    <a href="cars.html"><button class="blue_button">lista samochodów</button></a>
+        <article>
+            <div class="car">
+                <div class="car_photo">
+                    <img src="img/huracan-evo.jpg" alt="Lamborghini Huracan EVO">
+                </div>
+                <div class="car_info">
+                    <h2>Lamborghini Huracan EVO</h2>
+                    <div class="short_info">
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-wrench"></i> <p>680km</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-gauge"></i> <p>2.9s do 100km/h</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-sharp fa-solid fa-gears"></i> <p>automat</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </main>
+
+            <div class="car">
+                <div class="car_photo">
+                    <img src="img/mclaren-570gt.jpg" alt="Lamborghini Huracan EVO">
+                </div>
+                <div class="car_info">
+                    <h2>McLaren 570GT</h2>
+                    <div class="short_info">
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-wrench"></i> <p>680km</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-gauge"></i> <p>2.9s do 100km/h</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-sharp fa-solid fa-gears"></i> <p>automat</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="car">
+                <div class="car_photo">
+                    <img src="img/porshe-911gt3.jpg" alt="Lamborghini Huracan EVO">
+                </div>
+                <div class="car_info">
+                    <h2>Porsche 911 GT3</h2>
+                    <div class="short_info">
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-wrench"></i> <p>680km</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-gauge"></i> <p>2.9s do 100km/h</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-sharp fa-solid fa-gears"></i> <p>automat</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="car">
+                <div class="car_photo">
+                    <img src="img/audi-r8.jpg" alt="Lamborghini Huracan EVO">
+                </div>
+                <div class="car_info">
+                    <h2>Audi A8 Performance</h2>
+                    <div class="short_info">
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-wrench"></i> <p>680km</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-solid fa-gauge"></i> <p>2.9s do 100km/h</p>
+                        </div>
+                        <div class="short_info_element">
+                            <i class="fa-sharp fa-solid fa-gears"></i> <p>automat</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
 
         <section class="contact">
             <div class="phone_email">
