--- a/resetpass.html
+++ b/resetpass.html
@@ -17,6 +17,7 @@
 
     <!-- tablet styles -->
     <link rel="stylesheet" href="css/main-tablet.css">
+    <link rel="stylesheet" href="css/login-tablet.css">
     
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
@@ -64,8 +65,8 @@
                         instrukcję postępowania</p>
                     <form action="#">
                         <label for="email">wpisz e-mail:</label>
-                        <input type="text" name="email" id="email">
-                        <input type="button" value="wyślij">
+                        <input type="email" name="email" id="email">
+                        <input type="submit" value="wyślij">
                     </form>
                     <div class="login_options">
                         <a class="go_back_href" href="login.html">wstecz</a>
@@ -86,14 +87,15 @@
                 <h2>napisz do nas</h2>
                 <form action="#">
                     <label for="user-email">Twoj adres e-mail:</label>
-                    <input id="user-email" type="text">
+                    <input id="user-email" type="email">
                     <label for="user-message">Treść wiadomości:</label>
                     <input id="user-email" type="textarea">
                     <div class="checkbox_div">
-                        <input type="checkbox" name="personal-data" id="personal-data">Zgadzam się na wykorzystanie
-                        danych osobowych zgodnie z Polityką Prywatności
+                        <input type="checkbox" name="personal-data" id="personal-data" required>
+                        <p>Zgadzam się na wykorzystanie
+                        danych osobowych zgodnie z Polityką Prywatności</p>
                     </div>
-                    <input type="button" value="WYŚLIJ WIADOMOŚĆ">
+                    <input type="submit" value="WYŚLIJ WIADOMOŚĆ">
                 </form>
             </div>
         </section>
