--- a/cars.html
+++ b/cars.html
@@ -60,7 +60,7 @@
         <article>
             <div class="car">
                 <div class="car_photo">
-                    <img src="img/huracan-evo.jpg" alt="Lamborghini Huracan EVO">
+                    <a href="cars-html/lamboEvo.html"><img src="img/huracan-evo.jpg" alt="Lamborghini Huracan EVO"></a>
                 </div>
                 <div class="car_info">
                     <h2>Lamborghini Huracan EVO</h2>
