--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button onclick="toggleNavbar()"><i class="fa-solid fa-bars"></i></button>
             <div class="nav_contacts">
                 <button onclick="toggleContact()"><i class="fa-solid fa-phone-volume"></i></button>
-                <button><a class="link_button" href="login.html"><i class="fa-solid fa-right-to-bracket"></i></a></button>
+                <button><a class="link_button" href="login.php"><i class="fa-solid fa-right-to-bracket"></i></a></button>
                 <div class="phone_number_boxDisplay">
                     <div class="phone_number_box">
                         <p>Skontaktuj sie z nami</p>
@@ -60,7 +60,7 @@
                 <h1 class="company_name">szybka jazda</h1>
                 <img class="img_logo" src="img/logo.png" alt="engine with star - logo">
                 <div class="main_buttons">
-                    <a href="cars.html"><button class="blue_button">lista samochodów</button></a>
+                    <a href="cars.php"><button class="blue_button">lista samochodów</button></a>
                 </div>
             </div>
         </main>
