update cars css

--- a/cars-html/lamboEvo.html
+++ b/cars-html/lamboEvo.html
@@ -19,6 +19,7 @@
     <!-- tablet styles -->
     <link rel="stylesheet" href="../css/main-tablet.css">
     <link rel="stylesheet" href="../css/cars-tablet.css">
+    <link rel="stylesheet" href="../css/car-single-tablet.css">
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="../img/favicon.ico">
