--- a/howworks.html
+++ b/howworks.html
@@ -29,11 +29,11 @@
             <button onclick="toggleNavbar()"><i class="fa-solid fa-xmark"></i></button>
             <ul>
                 <li><a href="index.html">strona główna</a></li>
-                <li><a href="cars.html">samochody</a></li>
+                <li><a href="cars.php">samochody</a></li>
                 <li><a href="about.html">dlaczego my?</a></li>
                 <li><a href="voucher.html">vouchery</a></li>
                 <li><a href="howworks.html">jak to działa?</a></li>
-                <a href="cars.html">zarezerwuj</a>
+                <a href="cars.php">zarezerwuj</a>
                 <div class="phone_number_box">
                     <p>Skontaktuj sie z nami</p>
                     <a href="tel:000-000-000"><i class="fa-solid fa-phone"></i>+48 000 000 000</a>
@@ -67,20 +67,22 @@
             </div>
             <div class="how_works_orange_wrapper">
                 <h2>Jak wygląda proces wypożyczenia?</h2>
-                <div class="how_works_desc">
-                    <i class="fa-solid fa-list-check"></i>
-                    <h2>Wypełnij formularz online</h2>
-                    <p>Zarezerwuj samochód w Panelu Rezerwacji, zadzwoń, napisz e-mail lub skontaktuj się z nami przez media społecznościowe – w zależności od tego, która metoda jest dla Ciebie najwygodniejsza. Złożenie rezerwacji w Qamjie zajmuje najwyżej kilka minut.</p>
-                </div>
-                <div class="how_works_desc">
-                    <i class="fa-sharp fa-regular fa-clock"></i>
-                    <h2>Czekaj na potwierdzenie</h2>
-                    <p>Potwierdzamy rezerwacje i przygotowujemy samochód. Daj nam chwilę – dokładamy wszelkich starań, aby każdy szczegół zachwycał Cię swoją perfekcją przez całą podróż. Powinieneś otrzymać wiadomość e-mail z informacją, że Twoja rezerwacja została zatwierdzona. Zamówiony samochód możesz odebrać bezpośrednio w naszej siedzibie lub spod adresu wskazanego w zamówieniu.</p>
-                </div>
-                <div class="how_works_desc">
-                    <i class="fa-solid fa-road"></i>
-                    <h2>Odbierz auto i ruszaj w drogę</h2>
-                    <p>Wszystko jest gotowe. Wsiadaj i jedź, gdzie chcesz. Delektuj się tym doświadczeniem - jest wyjątkowe. W końcu samochód możesz zwrócić w każdym polskim mieście – wystarczy wcześniej podać adres, a my przyjedziemy po odbiór.</p>
+                <div class="how_works_wrapper">
+                    <div class="how_works_desc">
+                        <i class="fa-solid fa-list-check"></i>
+                        <h2>Wypełnij formularz online</h2>
+                        <p>Zarezerwuj samochód w Panelu Rezerwacji, zadzwoń, napisz e-mail lub skontaktuj się z nami przez media społecznościowe – w zależności od tego, która metoda jest dla Ciebie najwygodniejsza. Złożenie rezerwacji w Qamjie zajmuje najwyżej kilka minut.</p>
+                    </div>
+                    <div class="how_works_desc">
+                        <i class="fa-sharp fa-regular fa-clock"></i>
+                        <h2>Czekaj na potwierdzenie</h2>
+                        <p>Potwierdzamy rezerwacje i przygotowujemy samochód. Daj nam chwilę – dokładamy wszelkich starań, aby każdy szczegół zachwycał Cię swoją perfekcją przez całą podróż. Powinieneś otrzymać wiadomość e-mail z informacją, że Twoja rezerwacja została zatwierdzona. Zamówiony samochód możesz odebrać bezpośrednio w naszej siedzibie lub spod adresu wskazanego w zamówieniu.</p>
+                    </div>
+                    <div class="how_works_desc">
+                        <i class="fa-solid fa-road"></i>
+                        <h2>Odbierz auto i ruszaj w drogę</h2>
+                        <p>Wszystko jest gotowe. Wsiadaj i jedź, gdzie chcesz. Delektuj się tym doświadczeniem - jest wyjątkowe. W końcu samochód możesz zwrócić w każdym polskim mieście – wystarczy wcześniej podać adres, a my przyjedziemy po odbiór.</p>
+                    </div>
                 </div>
             </div>
             <div class="bg_img">
