--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <button onclick="toggleNavbar()"><i class="fa-solid fa-xmark"></i></button>
             <ul>
                 <li><a href="index.html">strona główna</a></li>
-                <li><a href="cars.html">samochody</a></li>
+                <li><a href="cars.php">samochody</a></li>
                 <li><a href="about.html">dlaczego my?</a></li>
                 <li><a href="voucher.html">vouchery</a></li>
                 <li><a href="howworks.html">jak to działa?</a></li>
-                <a href="cars.html">zarezerwuj</a>
+                <a href="cars.php">zarezerwuj</a>
                 <div class="phone_number_box">
                     <p>Skontaktuj sie z nami</p>
                     <a href="tel:000-000-000"><i class="fa-solid fa-phone"></i>+48 000 000 000</a>
