add pc css, update css

--- a/cars-html/lamboEvo.html
+++ b/cars-html/lamboEvo.html
@@ -21,6 +21,11 @@
     <link rel="stylesheet" href="../css/cars-tablet.css">
     <link rel="stylesheet" href="../css/car-single-tablet.css">
 
+    <!-- PC styles -->
+    <link rel="stylesheet" href="../css/main-pc.css">
+    <link rel="stylesheet" href="../css/cars-pc.css">
+    <link rel="stylesheet" href="../css/car-single-pc.css">
+
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="../img/favicon.ico">
 </head>
@@ -64,7 +69,7 @@
                 <div class="car_photo">
                     <img src="../img/huracan-evo.jpg" alt="Lamborghini Huracan EVO">
                 </div>
-                <div class="car_info">
+                <div class="car_info car_info_single">
                     <h2>Lamborghini Huracan EVO</h2>
                     <div class="short_info">
                         <div class="short_info_element">
