--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- tablet styles -->
     <link rel="stylesheet" href="css/main-tablet.css">
 
+    <!-- PC styles -->
+    <link rel="stylesheet" href="css/main-pc.css">
+
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
 </head>
