--- a/howworks.html
+++ b/howworks.html
@@ -19,6 +19,10 @@
     <!-- tablet styles -->
     <link rel="stylesheet" href="css/main-tablet.css">
 
+    <!-- PC styles -->
+    <link rel="stylesheet" href="css/main-pc.css">
+    <link rel="stylesheet" href="css/howworks-pc.css">
+
     <!-- favicon -->
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
 </head>
