--- a/cars-html/lamboEvo.html
+++ b/cars-html/lamboEvo.html
@@ -32,15 +32,16 @@
 
 <body>
     <div class="wrapper">
+        <!-- Mobile/Tablet version header -->
         <nav class="navbar">
             <button onclick="toggleNavbar()"><i class="fa-solid fa-xmark"></i></button>
             <ul>
                 <li><a href="../index.html">strona główna</a></li>
-                <li><a href="../cars.html">samochody</a></li>
+                <li><a href="../cars.php">samochody</a></li>
                 <li><a href="../about.html">dlaczego my?</a></li>
-                <li><a href="../voucher.html">vouchery</a></li>
+                <li><a href="../voucher.php">vouchery</a></li>
                 <li><a href="../howworks.html">jak to działa?</a></li>
-                <a href="../cars.html">zarezerwuj</a>
+                <a href="../cars.php">zarezerwuj</a>
                 <div class="phone_number_box">
                     <p>Skontaktuj sie z nami</p>
                     <a href="tel:000-000-000"><i class="fa-solid fa-phone"></i>+48 000 000 000</a>
@@ -53,7 +54,7 @@
             <button onclick="toggleNavbar()"><i class="fa-solid fa-bars"></i></button>
             <div class="nav_contacts">
                 <button onclick="toggleContact()"><i class="fa-solid fa-phone-volume"></i></button>
-                <button><a class="link_button" href="../login.html"><i class="fa-solid fa-right-to-bracket"></i></a></button>
+                <button><a class="link_button" href="../login.php"><i class="fa-solid fa-right-to-bracket"></i></a></button>
                 <div class="phone_number_boxDisplay">
                     <div class="phone_number_box">
                         <p>Skontaktuj sie z nami</p>
@@ -63,6 +64,38 @@
                 </div>
             </div>
         </header>
+        <!-- -------------------------------------------- -->
+
+        <!-- PC version header -->
+        <header class="header_pc clearfix">
+            <div class="nav_menu">
+                <ul>
+                    <li><a href="../index.html">strona główna</a></li>
+                    <li><a href="../cars.php">samochody</a></li>
+                    <li><a href="../about.html">dlaczego my?</a></li>
+                    <li><a href="../voucher.php">vouchery</a></li>
+                    <li><a href="../howworks.html">jak to działa?</a></li>
+                </ul>
+            </div>
+            <button><a class="link_button" href="../login.php"><i class="fa-solid fa-right-to-bracket"></i></a></button>
+        </header>
+        <!-- --------------------------------------- -->
+
+        <!-- PC version header -->
+        <header class="header_pc clearfix">
+            <div class="nav_menu">
+                <ul>
+                    <li><a href="../index.html">strona główna</a></li>
+                    <li><a href="../cars.html">samochody</a></li>
+                    <li><a href="../about.html">dlaczego my?</a></li>
+                    <li><a href="../voucher.php">vouchery</a></li>
+                    <li><a href="../howworks.html">jak to działa?</a></li>
+                </ul>
+            </div>
+            <button><a class="link_button" href="../login.php"><i class="fa-solid fa-right-to-bracket"></i></a></button>
+        </header>
+        <!-- --------------------------------------- -->
+
 
         <article>
             <div class="car">
